adds aria roles

--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,6 @@
     font-family: 'Poppins', sans-serif;
 }
 
-
-
 h4 {
     font-size: 24px;
     font-weight: 400;
@@ -71,8 +69,6 @@ h3 {
     height: 50px;
     width: 100%;
 }
-  
-
   
 .nav-list {
     display: none;
@@ -284,6 +280,72 @@ li a:hover {
     margin-top: 5px;
 }
 
+.contact {
+    border: 2px solid #FA4A0C;
+    border-radius: 30px;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact-txt {
+    font-weight: 600;
+    text-align: center;
+    margin: 20px;
+}
+
+fieldset {
+    padding: 30px;
+    border: none;
+}
+
+.input {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+#yourname {
+    border: 1px solid #FA4A0C;
+    border-radius: 20px;
+    height: 30px;
+    font-size: 16px;
+    color: #252B42;
+}
+
+#youremail {
+    border: 1px solid #FA4A0C;
+    border-radius: 20px;
+    height: 30px;
+    color: #252B42;
+}
+
+#yourmessage {
+    border: 1px solid #FA4A0C;
+    border-radius: 20px;
+    height: 80px;
+    color: #252B42;
+}
+
+label {
+    margin-left: 15px;
+    margin-bottom: 5px;
+}
+
+.btnf {
+    background-color: #FA4A0C;
+    border: none;
+    border-radius: 30px;
+    height: 40px;
+    width: 100px;
+    color: white;
+    font-weight: 500;
+    font-size: 16px;
+    margin-top: 10px;
+}
+
 @media screen and (min-width: 744px ) {
     h4 {
         font-size: 24px;
@@ -440,6 +502,7 @@ li a:hover {
     }
 
     .main-content {
+        margin: 0;
         margin-top: 700px;
     }
 
@@ -519,6 +582,7 @@ li a:hover {
         align-items: center;
         width: 100%;
         padding: 50px;
+        padding-right: 0;
         margin: 0px;
     }
     
@@ -609,9 +673,54 @@ li a:hover {
         margin-top: 5px;
     }
 
+    .contact {
+        border: 2px solid #FA4A0C;
+        border-radius: 30px;
+        margin: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
     
+    .contact-txt {
+        font-weight: 600;
+        text-align: center;
+        margin: 20px;
+    }
+    
+    fieldset {
+        padding: 30px;
+        border: none;
+    }
+    
+    .input {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10px;
+    }
+    
+    #yourname {
+        border: 1px solid #FA4A0C;
+        border-radius: 20px;
+        height: 30px;
+        min-width: 500px;
+        color: #252B42;
+    }
+    
+    #youremail {
+        border: 1px solid #FA4A0C;
+        border-radius: 20px;
+        height: 30px;
+        min-width: 500px;
+        color: #252B42;
+    }
+    
+    #yourmessage {
+        border: 1px solid #FA4A0C;
+        border-radius: 20px;
+        height: 80px;
+        min-width: 500px;
+        color: #252B42;
+    }
 }
-
-
-
-
